--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,9 +21,13 @@ const { title = "Astro Basics" } = Astro.props;
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 		<!-- Bootstrap CSS -->
+
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 		<!-- Bootstrap Icons -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+
 	</head>
 	<body class="d-flex flex-column min-vh-100">
 		<Navbar />
@@ -33,6 +37,7 @@ const { title = "Astro Basics" } = Astro.props;
 		<Footer />
 		<!-- Bootstrap JS Bundle -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 	</body>
 </html>
 
