--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Navbar from '../components/Navbar.astro';
 import Footer from '../components/Footer.astro';
+import WhatsappFlotante from '../components/WhatsappFlotante.astro';
 interface Props {
 	title?: string;
 }
@@ -34,6 +35,7 @@ const { title = "Astro Basics" } = Astro.props;
 		<main class="flex-grow-1">
 			<slot />
 		</main>
+	<WhatsappFlotante/>
 		<Footer />
 		<!-- Bootstrap JS Bundle -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
